# hermes-opentine-integrations

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
opentine_cli_commands/: __init__.py  __main__.py
opentine_cli_commands/templates/claude/: tine-diff.md  tine-fork.md  tine-list.md  tine-replay.md  tine-show.md
opentine_cli_commands/templates/codex/: mcp_servers.json
opentine_cli_commands/templates/hermes/: __init__.py  plugin.yaml
opentine_cli_commands/templates/kimi/: config.json
opentine_cli_commands/templates/opencode/: config.json
src/hermes_opentine/: __init__.py  mcp_wrapper.py  robotics_recorder.py  run_recorder.py
tests/: test_recorders.py
