[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-opentine-integrations"
version = "0.1.0"
description = "opentine provenance recorders for Hermes agent runs — git for agent runs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Daedalus Development Group / 0xcircuitbreaker" },
]
keywords = ["opentine", "hermes", "agent", "provenance", "audit", "robotics", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "opentine>=0.1.1",
]

[project.optional-dependencies]
mcp = [
    "mcp",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/0xcircuitbreaker/hermes-opentine-integrations"
Repository = "https://github.com/0xcircuitbreaker/hermes-opentine-integrations"
Issues = "https://github.com/0xcircuitbreaker/hermes-opentine-integrations/issues"
Changelog = "https://github.com/0xcircuitbreaker/hermes-opentine-integrations/blob/main/CHANGELOG.md"

[project.scripts]
hermes-opentine-mcp = "hermes_opentine.mcp_wrapper:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_opentine"]
